--- a/src/match.css
+++ b/src/match.css
@@ -5,6 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     position:relative;
+    
 }
 
 .half{
@@ -14,6 +15,19 @@
     opacity:0.8;
     position:absolute;
     top:50%;
+}
+
+h1{
+    position:relative;
+    top:19%;
+    left:10%;
+    color:white;
+}
+.hero{
+    position:relative;
+    top:20%;
+    left:10%;
+    color:black;
 }
 
 /*.btn{
@@ -98,7 +112,7 @@ h3{
 .button-container{
     position:relative;
     /*bottom:137px;*/
-    bottom:225px;
+    bottom:140px;
 
 }
 
