--- a/src/match.css
+++ b/src/match.css
@@ -17,12 +17,12 @@
     top:50%;
 }
 
-h1{
+/*h1{
     position:relative;
     top:19%;
     left:10%;
     color:white;
-}
+}*/
 .hero{
     position:relative;
     top:20%;
