--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,42 @@ body {
 .col-lg-3 p{
   color: #b3b3b3;
 }
+.footer{
+  width:100%;
+  height:200px;
+  background-color: #2B65BB;
+  opacity:0.8;
+  margin-top:80px;
+}
+section{
+  text-align: center;
+  position: relative;
+  top:20%;
+}
+.social-list li{
+  width:80px;
+  height:35px;
+}
+.icon-social{
+  width:80%;
+  height: 80%;
+}
+.footer-list li{
+ display: inline-block;
+ color:white;
+ font-size:2.0rem;
+}
+.contact-link{
+  color:inherit;
+  cursor: pointer;
+}
+.contact-link:hover{
+  color:inherit;
+  text-decoration: none;
+}
+.divider{
+  padding:10px
+}
 @media (max-width: 576px) {
   .description{
     height:335px;
