--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,12 @@ ul{
   width:20%;
   height:20%;
   opacity: 0.8;
+  -webkit-transition: width 0.2s, height 0.2s; /* For Safari 3.1 to 6.0 */
+  transition: width 0.2s height 0.2s;
+}
+.icon:hover{
+  width:30%;
+  height:30%;
 }
 .col-lg-3 h3{
   font-family: adobe-clean,helvetica,arial,sans-serif;
@@ -114,6 +120,12 @@ section{
 .icon-social{
   width:80%;
   height: 80%;
+  -webkit-transition: width 0.2s, height 0.2s; /* For Safari 3.1 to 6.0 */
+  transition: width 0.2s height 0.2s;
+}
+.icon-social:hover {
+  width:100%;
+  height:100%;
 }
 .footer-list li{
  display: inline-block;
